kit product product by attrbutes functionality added tested on my side need to test as well with the true combination of attributes Imported from Changeset 2613

--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -2886,6 +2886,11 @@ body.ZoomerActive {
         margin-bottom: 36px;
     }
 
+        .nb_basket_wrap table.basketTable.childbasketTable {
+            margin-left: 7%;
+            width: 93%;
+        }
+
         .nb_basket_wrap table.basketTable thead {
             border-bottom: solid 1px #707070;
         }
