--- a/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
@@ -7,7 +7,9 @@
     var Images = ConfigurationManager.AppSettings["ImageFormats"].Split(new char[] { ',' });
     var Videos = ConfigurationManager.AppSettings["VideoFormats"].Split(new char[] { ',' });
     var Files = ConfigurationManager.AppSettings["DocumentFormats"].Split(new char[] { ',' });
+
 }
+
 
 <div class="container-fluid custom-container-fluid pl-0 pr-0">
     <div id="product-product" class="container m-auto kit-product">
@@ -47,6 +49,7 @@
 
                 <div>
                     <h2 style="padding: 0px 15px;">@Model.Name</h2>
+                    <input type="hidden" id="main-kit-product" value="@Model.ProductId" />
                     <div class="row product-bg">
                         <div class="sticky description-row col-lg-6 col-md-6">
                             <ul class="thumbnails">
@@ -182,7 +185,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link active" data-toggle="tab" href="#home" role="tab">Options</a>
                                 </li>
-                               
+
                             </ul><!-- Tab panes -->
                             <div class="tab-content kit-tabs-content responsive">
                                 <div class="tab-pane active" id="home" role="tabpanel">
@@ -191,41 +194,85 @@
                                             <div class="cartitem-text">
                                                 <p><a href=""><strong>@Model.Name</strong></a></p>
                                                 <p><b>SKU Code:</b> <span>@Model.SKUCode</span></p>
+
+                                                @*<p>
+                                                        <div class=" required ">
+                                                            <label class="control-label" for="input-option226">Select Available Option</label>
+                                                            <select name="option[226]" id="input-option226" class="form-control">
+                                                                <option value=""> --- Please Select --- </option>
+                                                                <option value="black">
+                                                                    Black
+                                                                </option>
+                                                            </select>
+                                                        </div>
+                                                    </p>*@
                                                 <p class="cart-quantity">
                                                     <b>Quantity:</b> <input type="number" min="0" placeholder="Qty" onchange="" value="1" />
                                                     @*<a href="javascript:;" class="remove-btn cart-del" onclick=""><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>*@
                                                 </p>
-                                                <p>
-                                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                                    when an unknown printer took a galley of type and scrambled it to make a type 
-                                                    specimen book. 
-                                                </p>
+                                                <p class="cart-quantity"><b>In this kit following products are include:</b></p>
+                                                @{
+                                                    var products = Model.ProductKitItems.Where(u => u.ProductKitType == Ganedata.Core.Entities.Enums.ProductKitTypeEnum.Kit && u.IsDeleted != true && u.IsActive != false).ToList();
+                                                    int i = 0;
+                                                }
+                                                @foreach (var productitems in products)
+                                                {
+                                                    if (i == 0)
+                                                    {
+                                                        <p>
+                                                            <b> @Convert.ToInt32(productitems.Quantity)</b> x @productitems.KitProductMaster.Name  <br />
+                                                            @if (!string.IsNullOrEmpty(productitems.KitProductMaster.Description))
+                                                            {
+                                                                @productitems.KitProductMaster.Description<br />
+                                                            }
+
+                                                        </p>
+
+
+
+                                                    }
+                                                    if (productitems.KitProductMaster.ProductType == Ganedata.Core.Entities.Enums.ProductKitTypeEnum.ProductByAttribute)
+                                                    {
+
+
+                                                        <div class="kit-cartitem-details" style="display:none;">
+
+                                                            <span class="sku-code">@productitems.KitProductMaster.SKUCode</span>
+                                                            <span class="prod-qty">@productitems.Quantity</span>
+                                                            <span class="prod-id">@productitems.KitProductId</span>
+
+                                                        </div>
+
+                                                    }
+
+
+                                                }
+
                                             </div>
                                         </div>
                                         <div class="cartitem-price">
                                             <p><span>Price:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
-                                            <p><span>Total:</span><b>@ViewBag.CurrencySymbol @Model.SellPrice</b></p>
                                             <div class="button-submit">
-                                                @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0)
+                                                @if (Model.SellPrice > 0 && Model.SellPrice.HasValue && Model.PercentMargin > 0)
                                                 {
-                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn" id="button-cart" onclick="AddToCart(@Model.ProductId)">Add to Basket</button>
+                                                    <button type="Submit" name="submitNewsletter" class="btn btn-block move-to-cart-btn add-kit-product" id="button-cart">Add to Basket</button>
                                                 }
                                                 else
                                                 {
-                                                    <button type="button" class=" btn btn-block disabled-btn" disabled>Add to Basket</button>
+                                                    <button type="button" class=" btn btn-block disabled-btn add-kit-product">Add to Basket</button>
                                                 }
 
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                              
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
