some more refactors Imported from Changeset 2617

--- a/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/KitProductDetail.cshtml
@@ -237,7 +237,7 @@
                                                     {
 
 
-                                                        <div class="kit-cartitem-details" style="display:none;">
+                                                        <div class="kit-cart-item-details" style="display:none;">
 
                                                             <span class="sku-code">@productitems.KitProductMaster.SKUCode</span>
                                                             <span class="product-quantity">@productitems.Quantity</span>
