Added shipment rule selection to checkout process, + some re-factors. Imported from Changeset 2621

--- a/WMS/Views/Theme/Default/WebsiteShippingRules/Delete.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteShippingRules/Delete.cshtml
@@ -32,6 +32,10 @@
             @Html.DisplayNameFor(model => model.Courier)
         </dt>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
         <dd>
             @Html.DisplayFor(model => model.Courier)
         </dd>
