--- a/WMS/Views/Theme/Default/WebsiteShippingRules/Details.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteShippingRules/Details.cshtml
@@ -35,6 +35,10 @@
             @Html.DisplayFor(model => model.Courier)
         </dd>
 
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Region)
         </dt>
