--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
@@ -39,20 +39,20 @@
                                     </div>
 
                                 }
-                                @if ((ShippingMethodType)ViewBag.ShipmentMethod == ShippingMethodType.Delivery)
+                                @if ((DeliveryMethod)ViewBag.DeliveryMethodId == DeliveryMethod.ToShipmentAddress)
                                 {
-                                    foreach (var shiping in shipppingAddress)
+                                    foreach (var shipping in shipppingAddress)
                                     {
                                         <div class="col-md-6 col-sm-6 shipping-address-col">
                                             <h2 class="text-uppercase"> Shipping Address</h2>
                                             <hr class="custom-hr">
                                             <p>
                                             <p>
-                                                <b>@shiping.AddressLine1 </b> <br />
-                                                @shiping.AddressLine2 <br />
-                                                @shiping.AddressLine3 @shiping.PostCode <br />
-                                                @shiping.GlobalCountry.CountryName <br />
-                                                <b> Phone:</b> @shiping.Telephone <br />
+                                                <b>@shipping.AddressLine1 </b> <br />
+                                                @shipping.AddressLine2 <br />
+                                                @shipping.AddressLine3 @shipping.PostCode <br />
+                                                @shipping.GlobalCountry.CountryName <br />
+                                                <b> Phone:</b> @shipping.Telephone <br />
 
                                             </p>
                                             </p>
@@ -131,7 +131,7 @@
                             <br />
                             @if (ViewBag.TotalQty != null && (int)ViewBag.TotalQty > 0)
                             {
-                                <label><b> Total: </b>@ViewBag.Symbol @(ViewBag.TotalQty == null ? 0 : ViewBag.TotalQty) </label>
+                                <label><b> Total: </b>@ViewBag.CurrencySymbol@(ViewBag.TotalQty == null ? 0 : ViewBag.TotalQty) </label>
                             }
                         </div>
 
@@ -145,18 +145,18 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12 bg-white my-account login mt-20">
                     <div class="about-cnt">
-                        <h4 class="text-uppercase mt-35">Shipment Method</h4>
+                        <h4 class="text-uppercase mt-35">Delivery Method</h4>
                         <hr class="custom-hr">
                         <div class="content-wrapper select">
-                            <div class="shippingMethod ">
+                            <div class="deliveryMethod ">
 
-                                @if ((ShippingMethodType)ViewBag.ShipmentMethod == ShippingMethodType.Delivery)
+                                @if ((DeliveryMethod)ViewBag.DeliveryMethodId == DeliveryMethod.ToShipmentAddress)
                                 {
-                                    <div class="form-inline">
-                                        <label class="control-label" for="radio2">
-                                            Delivery (Courier) $10
-                                        </label>
-                                    </div>
+                                <div class="form-inline">
+                                    <label class="control-label" for="radio2">
+                                        Delivery by @ViewBag.ShippingRule.Courier @(!string.IsNullOrEmpty(ViewBag.ShippingRule.Description?.Trim()) ? $"({ViewBag.ShippingRule.Description})" : "" ) - @ViewBag.CurrencySymbol@ViewBag.ShippingRule.Price
+                                    </label>
+                                </div>
                                 }
                                 else
                                 {
@@ -169,8 +169,8 @@
                             </div>
                             <h4 class="text-uppercase mt-35">Payment Method</h4>
                             <hr class="custom-hr">
-                            <div class="shippingMethod">
-                                @if ((ShippingMethodType)ViewBag.ShipmentMethod == ShippingMethodType.Delivery)
+                            <div class="deliveryMethod">
+                                @if ((PaymentMethod)ViewBag.paymentMethod == PaymentMethod.Cash)
                                 {
                                     <div class="form-inline">
                                         <label class="control-label" for="radio2">
