Payment gateway related changes + Minor fixes Imported from Changeset 2624

--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/GetAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/GetAddress.cshtml
@@ -223,6 +223,13 @@
                                     </label>
                                 </div>
                             </div>
+                            <div class="deliveryMethod ">
+                                <div class="form-check-inline">
+                                    <label class="control-label" for="radio3">
+                                        <input type="radio" class="form-check-input" id="Cash" name="paymentMethod" value="@((int)PaymentMethod.SagePay)">  Cash
+                                    </label>
+                                </div>
+                            </div>
                             <div class="">
                                 <a href="javascript:;" role="button" class="btn btn-primary select-payment-method-btn" style="font-size:11px" onclick="choosePaymentMethod()">Select payment method</a>
                             </div>
