--- a/WarehouseEcommerce/Views/Theme/University/Shared/_KitProductChildsSelectorWizardModal.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_KitProductChildsSelectorWizardModal.cshtml
@@ -11,8 +11,22 @@
             <div style="display:none">
                 <label style="color:red" id="#errorprint"></label>
             </div>
-            <div class="modal-body kit-model-body">
+            <div class="modal-body">
+                <div class=" row kit-model-body">
+
+                </div>
+                @*<div class="row">
+                    <div class="col-md-6 off-set-4">
+                        <label>Select same attribute for this product</label>
+                        <div class="dynamic-dropdown">
+
+                        </div>
+                        
+                    </div>
+                </div>*@
+
             </div>
+           
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">
                     Close
